--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@react-email/components": "^0.0.25",
     "@tabler/icons-react": "^3.14.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
     "gsap": "^3.12.5",
     "next": "14.2.5",
+    "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-type-animation": "^3.2.0",
+    "resend": "^4.0.0",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^2.5.2"
   },
